# necalc

./: CMakeLists.txt  README.md  necalc.cpp
